style.css
body {
  font-family: "Poppins", sans-serif;
  margin: 0;
  padding-top: 3.5rem;
  overflow: hidden;
}

html, body {
    max-width: 100%;
    overflow-x: hidden;
}

/* Default Stylings for all elements */

.container {
  padding: 0 calc(2rem + 1vw);
}

/* NavBar related Styles */
nav {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

nav a {
  text-decoration: none;
  color: #000000;
  font-weight: 500;
  font-size: 22px;
}

nav ul {
  display: flex;
  align-items: center;
  justify-content: space-around;
  width: calc(100% - -94px);
  padding: 0;
}

nav li {
  list-style: none;
  cursor: pointer;
}

.sign-up-btn {
  background: #000000;
  color: #fefefe;
  border-radius: 7px;
  padding: calc(0.4rem + 0.5vw) calc(0.5rem + 1vw);
  font-size: 22px;
}

.hamburger-menu {
  display: none;
  cursor: pointer;
}

/* Hero related stylings */

.hero-wrapper {
  background: #f4f6f5;
  border-radius: 59px;
  display: flex;
  align-items: flex-end;
  justify-content: space-evenly;
  padding: 3rem 2rem 0 6rem;
  margin-top: 46px;
}

.skewed-white-bg {
  background: #ffffff;
  padding: 0 165px 0 25px;
  display: inline-block;
  transform: rotate(-3deg);
}

.hero-girl-img {
  position: relative;
  top: 5px;
}

.skewed-white-bg-text {
  display: inline-block;
  transform: rotate(3deg);
}

.skewed-orange-bg {
  background: #ebd96b;
  padding: 0 125px 0 25px;
  display: inline-block;
  transform: rotate(-3deg);
}

.skewed-orange-bg-text {
  display: inline-block;
  transform: rotate(3deg);
}

.hero-right-part {
  width: 100%;
}

.hero-left-part {
  width: 100%;
  aspect-ratio: 1;
}

.hero-heading-text {
  font-size: 96px;
  font-weight: 900;
  margin: 0;
  padding: 0;
}

.shop-now-btn {
  background: #000000;
  text-decoration: none;
  color: #ffffff;
  border-radius: 7px;
  padding: 20px 36px;
  font-size: 25px;
}

/* Brands slider stylings */

.brands-slider-wrapper {
  margin-top: 33px;
  background: #e6c744;
  padding: 2rem 0;
}

ul.splide__list li {
  display: flex;
  align-items: center;
  justify-content: center;
}

.splide__list img {
  width: 50%;
}



/* New Arrivals Stylings */

.new-arrivals-section {
  position: relative;
  margin-bottom: 60px;
}

.new-arrivals-section-title {
  position: relative;
  z-index: 2;
  font-weight: 900;
  font-size: 48px;
}

.new-arrivals-vector-img {
  position: absolute;
  top: 23px;
  left: 170px;
  z-index: 1;
}

.new-arrivals-details-wrapper {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.new-arrivals-product-wrapper {
  display: flex;
  align-items: center;
  gap: 5rem;
}

.new-arrivals-image-wrapper img {
  width: 100%;
}

.new-arrivals-details h4 {
  margin: 0;
  padding: 0;
  font-weight: 500;
  font-size: 30px;
}

.new-arrivals-details p {
  margin: 0;
  padding: 0;
  color: #7f7f7f;
  font-size: 21px;
}

/* Sale Now Stylings */

.sale-now {
  display: none;
  margin: 0;
  padding: 0;
  background: #e6c744;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  gap: 10rem;
  margin-top: 9rem;
}

.sale-white-bg {
  background: #ffffff;
  padding: 1% 2%;
}

.sale-now-img {
  width: 100%;
  aspect-ratio: 1;
}

.sale-now .right-part-wrapper,
.sale-now .left-part-wrapper {
  width: 100%;
}

.sale-now .right-part-wrapper {
  display: flex;
  flex-direction: column;
  gap: 20px;
}

.sale-now .right-part-wrapper p,
.sale-now .right-part-wrapper h2 {
  margin: 0;
}

.sale-now .right-part-wrapper h2 {
  font-size: 110px;
}

.sale-now-text {
  font-size: 30px;
  font-weight: 500;
}
.sale-now-terms-and-conditions-wrapper {
  font-size: 30px;
}

.sale-now-conditions {
  font-weight: 700;
}

/* Young's Favorite Styling */

.youngs-favorite {
  position: relative;
  margin-bottom: 5rem;
  margin-top: 7rem;
}

.youngs-favorite-section {
  margin-bottom: 60px;
}

.youngs-favorite-section-title {
  position: relative;
  z-index: 2;
  color: black;
  font-size: 48px;
  font-weight: 900;
}

.youngs-favorite-vector-img {
  position: absolute;
  top: 28px;
  left: 313px;
  z-index: 1;
}

.youngs-favorite-details-wrapper {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.youngs-favorite-product-wrapper {
  display: flex;
  align-items: center;
  gap: 5rem;
}

.youngs-favorite-image-wrapper img {
  width: 100%;
}

.youngs-favorite-details h4 {
  margin: 0;
  padding: 0;
  font-weight: 500;
  font-size: 30px;
}

.youngs-favorite-details p {
  margin: 0;
  padding: 0;
  color: #7f7f7f;
  font-size: 21px;
}

/* Download Apps Section Stylings */

.download-app {
  display: flex;
  align-items: center;
  justify-content: space-around;
}

.download-app-heading-text {
  font-size: 48px;
}

.download-app-text {
  font-size: 24px;
  color: #7c7c7c;
  margin-bottom: 75px;
}

.mobile-app-img {
  width: 100%;
}

/* Desktop stylings */

@media screen and (max-width: 1000px) and (min-width: 768px) {
  /* Navbar links Stylings */

  nav a {
    font-size: 13px;
    padding-right: 5px;
  }
  .sign-up-btn {
    font-size: 13px;
    padding: 8px 13px;
  }
}

@media screen and (max-width: 950px) and (min-width: 768px) {
  .hero-heading-text {
    font-size: 50px;
  }

  .hero-text {
    font-size: 24px;
    margin-bottom: 36px;
  }

  .hero-right-part {
    padding-left: 1.5rem;
  }

  .shop-now-btn {
    padding: 11px 17px;
    font-size: 19px;
  }
}

@media screen and (max-width: 1300px) and (min-width: 951px) {
  .hero-heading-text {
    font-size: 65px;
  }

  .hero-text {
    font-size: 30px;
    margin-bottom: 36px;
  }

  .hero-right-part {
    padding-left: 1.75rem;
  }

  .shop-now-btn {
    padding: 11px 17px;
    font-size: 24px;
  }
}

@media screen and (max-width: 1500px) and (min-width: 1301px) {
  .hero-heading-text {
    font-size: 75px;
  }

  .hero-text {
    font-size: 40px;
    margin-bottom: 60px;
  }

  .hero-right-part {
    padding-left: 2rem;
  }

  .shop-now-btn {
    padding: 20px 36px;
    font-size: 30px;
  }
}

@media screen and (max-width: 1600px) and (min-width: 1501px) {
  .hero-heading-text {
    font-size: 85px;
  }

  .hero-text {
    font-size: 50px;
    margin-bottom: 60px;
  }

  .hero-right-part {
    padding-left: 2rem;
  }

  .shop-now-btn {
    padding: 25px 40px;
    font-size: 40px;
  }
}

@media screen and (min-width: 1601px) {
  .hero-heading-text {
    font-size: 96px;
  }

  .hero-text {
    font-size: 26px;
    margin-bottom: 60px;
  }

  .shop-now-btn {
    padding: 27px 42px;
    font-size: 33px;
  }
}

@media screen and (max-width: 1200px) and (min-width: 1001px) {
  /* Navbar links Stylings */

  nav a {
    font-size: 14px;
  }
  .sign-up-btn {
    font-size: 14px;
    padding: 10px 14px;
  }
}

@media screen and (max-width: 1450px) and (min-width: 1201px) {
  /* Navbar links Stylings */

  nav a {
    font-size: 18px;
  }
  .sign-up-btn {
    font-size: 18px;
    padding: 13px 17px;
  }
}

@media screen and (min-width: 720px) {
  .logo-wrapper {
    width: 100%;
  }

  .hero-right-part {
    position: relative;
    aspect-ratio: 1;
  }

  .hero-girl-img {
    height: auto;
    width: 100%;
    aspect-ratio: 1;
  }

  .shop-now-btn-wrapper {
    margin: 0;
    padding-bottom: 5rem;
  }
}

@media screen and (max-width: 400px) and (min-width: 300px) {
  .skewed-white-bg {
    padding: 0 78px 0 25px;
  }

  .skewed-orange-bg {
    padding: 0 75px 0 25px;
  }
}

/* Mobile Stylings */

@media screen and (max-width: 767px) {
  .container {
    padding: 0 0.75rem;
  }

  /* Hero Mobile Stylings */

  .hero-wrapper {
    flex-direction: column;
    padding: 0.5rem 12px;
    justify-content: center;
    align-items: center;
    border-radius: 15px;
    margin-top: 15px;
  }

  .hero-heading-text {
    font-size: 12vw;
    text-align: center;
  }

  .hero-text {
    font-size: 4vw;
    text-align: center;
  }

  .shop-now-btn-wrapper {
    text-align: center;
    font-size: 4vw;
    margin-top: 46px;
  }

  .shop-now-btn {
    padding: 10px 18px;
    font-size: 25px;
  }

  .hero-right-part {
    margin: 0;
    display: flex;
  }

  .hero-girl-img {
    width: 100%;
  }
  .hero-right-part {
    position: relative;
    aspect-ratio: 1;
    order: 1;
  }

  .hero-left-part {
    padding-top: 5rem;
    padding-bottom: 1rem;
    order: 2;
  }

  .hero-girl-img {
    width: 100%;
    height: auto;
  }

  .logo-wrapper {
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 100%;
  }

  .logo-wrapper img {
    width: 50%;
  }

  /* Navbar Mobile Stylings */
  nav {
    flex-direction: column;
    align-items: center;
    justify-content: center;
  }

  nav ul {
    max-height: 0;
    opacity: 0;
    overflow: hidden;
    flex-direction: column;
    position: relative;
    background-color: #e6c744;
    width: 100%;
    padding: 0;
    transition: max-height 0.3s ease, opacity 0.3s ease, padding 0.3s ease;
  }

  nav a {
    color: black;
    font-size: 18px;
  }

  nav ul.active {
    max-height: 400px;
    opacity: 1;
    width: 100%;
    padding: 1.5rem 0;
  }

  .hamburger-menu {
    display: block;
    cursor: pointer;
  }

  .hamburger-menu i {
    font-size: 24px;
    color: #000;
  }
  nav li {
    margin-bottom: 16px;
  }

  .sign-up-btn {
    background: #000000;
    display: inline-block;
    color: #fefefe;
    border-radius: 7px;
    padding: 10px 10px;
    margin-top: 4px;
    font-size: 18px;
  }

  /* Brands Slider Stylings */

  .splide__list img {
    width: 40%;
}

  /* New Arrivals Stylings */

  .new-arrivals-product-wrapper {
    flex-direction: column;
    align-items: center;
    gap: 1rem;
  }

  .new-arrivals-section-title {
    font-size: 23px;
  }

  .new-arrivals-vector-img {
    position: absolute;
    top: 9px;
    left: 28px;
    z-index: 1;
  }

  /* Sale Now Stylings */
  .sale-now {
    flex-direction: column;
    gap: 6rem;
    display: none;
  }

  .sale-now .right-part-wrapper h2 {
    font-size: 60px;
  }
  .sale-now .right-part-wrapper {
    padding: 0 1rem;
  }

  /* Youngs Favorite Styling */

  .youngs-favorite-product-wrapper {
    flex-direction: column;
    align-items: center;
    gap: 1rem;
  }

  .youngs-favorite-section-title {
    font-size: 23px;
  }

  .youngs-favorite-vector-img {
    top: 4px;
    left: 50px;
  }

  /* Download App Sections */
  .download-app {
    flex-direction: column;
  }

  .download-app-buttons {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1rem;
  }

  .download-app-buttons img {
    width: 50%;
  }

  .download-app-heading-text {
    font-size: 22px;
    text-align: center;
  }

  .download-app-text {
    font-size: 16px;
    color: #7c7c7c;
    text-align: center;
    margin-bottom: 36px;
  }
}

/* end */

